--- a/templates/monster-sheet.html
+++ b/templates/monster-sheet.html
@@ -2,7 +2,7 @@
     
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
-        <img class="profile-img--big" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
+        <img class="profile-img--big player-image" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
     </div>
     
     <!-- TOP-CENTER-RIGHT - HEADER -->
