--- a/templates/player-character-sheet.html
+++ b/templates/player-character-sheet.html
@@ -271,7 +271,7 @@
         <!-- INVENTORY -->
         <nav class="equipmentTabs layout__gap" style="flex: 0; display: flex; flex-direction: row;">
             <a class="item frame__title megaphone drag-target" data-tab="inventory">Personal Inventory</a>
-            <a class="item frame__title megaphone drag-target" data-tab="mount">Mount Inventory</a>
+            <a class="item frame__title megaphone drag-target" data-tab="mount">Mount Inventory <img src={{data.mountIconUrl}} data-action="openmount" width="18px" height="18px" style="float: right; border: none"></a>
         </nav>
 
         <section class="equipmentContent table table--flexible" style="overflow-y: scroll; border: 1px solid black;">
