HTML numeric class name bug fixe. First attempt at Combat Tracker resource bug fix

--- a/templates/NPC-sheet.html
+++ b/templates/NPC-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--NPC {{actor._id}}" autocomplete="off">
+<form class="{{cssClass}} layout layout--NPC" autocomplete="off">
 
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
