--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} {{this.entity._id}}" autocomplete="off" style="font-size: 0.8rem;">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.8rem;">
 
     <div class="layout layout--equipment">
         <div class="layout__picture">
