--- a/templates/player-character-sheet.html
+++ b/templates/player-character-sheet.html
@@ -1,5 +1,5 @@
 {{#unless data.isSheetCompressed}}
-<form class="{{cssClass}} layout layout--PC {{actor._id}}" autocomplete="off">
+<form class="{{cssClass}} layout layout--PC" autocomplete="off">
 
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
@@ -62,7 +62,7 @@
     </header>
     {{else}}
 
-<form class="{{cssClass}} layout layout--PC-compact {{actor._id}} fbl" autocomplete="off">
+<form class="{{cssClass}} layout layout--PC-compact fbl" autocomplete="off">
     <header class="layout__header">
         <!-- CHARACTER NAME -->
         <div style="display:flex; flex-direction: row;">
