--- a/templates/critical-injury-sheet.html
+++ b/templates/critical-injury-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} criticalInjury {{item._id}}" autocomplete="off" style="font-size: 0.8rem; min-height: fit-content">
+<form class="{{cssClass}} criticalInjury" autocomplete="off" style="font-size: 0.8rem; min-height: fit-content">
     <div class="layout layout--equipment">
         <div class="layout__picture">
             <img class="profile-img--small" src="{{item.img}}" data-edit="img" title="{{item.name}}">
