--- a/templates/monster-sheet.html
+++ b/templates/monster-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--monster {{actor._id}}" autocomplete="off">
+<form class="{{cssClass}} layout layout--monster" autocomplete="off" style="overflow-y: scroll;">
     
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
