Spell Casting Times fix, Weapons and Armor dragging from Inventory Fix

--- a/templates/character-talent-sheet.html
+++ b/templates/character-talent-sheet.html
@@ -108,7 +108,7 @@
 
             <div class="frame__placement">
                 <div contenteditable="true" style="word-wrap: break-word;" data-edit="data.description">
-                    {{formatDisplay data.description}}
+                    {{~formatDisplay data.description}}
                 </div>
             </div>
         {{#unlesss data.type comparison="Kin"}}
