--- a/styles/roll-dialog.css
+++ b/styles/roll-dialog.css
@@ -6,6 +6,14 @@
     display: inline-flex;
 }
 
+.roll-dialog li:before {
+    content: none;
+}
+
+.roll-dialog ol {
+    padding: 0 0 0 0;
+}
+
 .roll-dialog .input-label {
     width: 120px;
     display: inline-flex;
