--- a/templates/cast-spell.html
+++ b/templates/cast-spell.html
@@ -62,10 +62,10 @@
             <div class="table frame__placement">
                 <div class="table__entry table__entry--2col">
                     <div class="table__field">
-                        <label class="table__data table__data--left-aligned">Base Dice: </label>
+                        <label class="table__data table__data--left-aligned">Rolled Dice: </label>
                     </div>
                     <div class="table__field">
-                        <label class="table__data">{{this.spentWillpower}}</label>
+                        <label class="table__data">{{this.rolledDice}}</label>
                     </div>
                     <div class="table__field">
                         <label class="table__data table__data--left-aligned">Power Level: </label>
