--- a/templates/stronghold-sheet.html
+++ b/templates/stronghold-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--Stronghold" autocomplete="off">
+<form class="{{cssClass}} layout layout--Stronghold {{actor._id}}" autocomplete="off">
     {{log data}}
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
