--- a/templates/player-character-sheet.html
+++ b/templates/player-character-sheet.html
@@ -1,5 +1,5 @@
 {{#unless data.isSheetCompressed}}
-<form class="{{cssClass}} layout layout--PC" autocomplete="off">
+<form class="{{cssClass}} layout layout--PC {{actor._id}}" autocomplete="off" style="will-change: transform">
 
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
@@ -62,7 +62,7 @@
     </header>
     {{else}}
 
-<form class="{{cssClass}} layout layout--PC-compact fbl" autocomplete="off">
+<form class="{{cssClass}} layout layout--PC-compact {{actor._id}} fbl" autocomplete="off" style="will-change: transform">
     <header class="layout__header">
         <!-- CHARACTER NAME -->
         <div style="display:flex; flex-direction: row;">
@@ -173,11 +173,11 @@
 
     <div class="layout__body">
         <!-- WEAPONS -->
-        <div class="frame drag-target" data-tab="weapons">
+        <div class="frame">
             <label class="frame__title">Weapons</label>
 
 
-            <div class="table dieHook-Weapon">
+            <div class="table dieHook-Weapon drag-target" data-tab="weapons">
                 {{#each data.Weapon as |weapon counter|}}
                 <div class="table__entry table__entry--PC-weapon-display table__entry--no-border frame frame__margin--PC-items drag-item " data-id="{{weapon._id}}">
                     <div class="table__field">
@@ -228,10 +228,10 @@
             </div>
         </div>
         <!-- ARMOR -->
-        <div class="frame layout__gap  drag-target" data-tab="armor">
+        <div class="frame layout__gap">
             <label class="frame__title">Armor</label>
 
-            <div>
+            <div class="table drag-target" data-tab="armor">
                 {{#each data.Armor as |armor counter|}}
                 <div class="table__entry table__entry--PC-armor-display table__entry--no-border frame frame__margin--PC-items drag-item " data-id="{{armor._id}}">
                     <div class="table__field">
