--- a/templates/stronghold-sheet.html
+++ b/templates/stronghold-sheet.html
@@ -1,5 +1,4 @@
 <form class="{{cssClass}} layout layout--Stronghold {{actor._id}}" autocomplete="off">
-    {{log data}}
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
         <img class="profile-img--big player-image" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
@@ -74,7 +73,8 @@
                                 <!-- <input type="text" class="table__data" name="data.functions.{{key}}.production.material.name" value="{{function.production.material.name}}" placeholder="Material"> -->
                                 <select class="table__data" name="data.functions.{{key}}.production.material.name">
                                     {{#select function.production.material.name}}
-                                    {{#each ../data.settings.products}}
+                                    {{log ../this}}
+                                    {{#each ../settings.products}}
                                     <option value="{{this}}">{{this}}</option>
                                     {{/each}}
                                     {{/select}}
